@@ -57,6 +57,7 @@ Version 1.5.7+svn:
    * Fix replays with empty starting positions.
    * Prevent access to invalidated memory after the first download when
      updating all installed add-ons (bug #12837).
+   * Adjusts drain game mechanics to match attack prediction (bug #7702)
 
 Version 1.5.7:
  * Campaigns:
